[gd_scene load_steps=52 format=3 uid="uid://wxhnd6tmnviy"]

[ext_resource type="Texture2D" uid="uid://dny882if237vn" path="res://Assets/Countertop/countertop_scene.png" id="1_85bba"]
[ext_resource type="Script" uid="uid://dmb20aemqvk3u" path="res://Countertop/countertop.gd" id="1_maqfh"]
[ext_resource type="Shader" uid="uid://bwpxoqllf8xeh" path="res://Kitchen/highlight_outline.gdshader" id="2_sn5ev"]
[ext_resource type="Texture2D" uid="uid://dmchqgnm2x7ce" path="res://Assets/Countertop/Extras/countertop_for_highlight.png" id="4_x24wc"]
[ext_resource type="Texture2D" uid="uid://bo3vdgosmu1v6" path="res://Assets/Countertop/Inventory list textures/coffee_bottle.png" id="5_maqfh"]
[ext_resource type="Texture2D" uid="uid://cq5qxnirpgf86" path="res://Assets/Countertop/Inventory list textures/milk_bottle.png" id="6_fv2u6"]
[ext_resource type="Texture2D" uid="uid://rej7grvmkq61" path="res://Assets/Kitchen/Utensils and Others/coffee_mug.png" id="6_sn5ev"]
[ext_resource type="Texture2D" uid="uid://cu2e612ajvo3s" path="res://Assets/Kitchen/Utensils and Others/tablespoon.png" id="7_x24wc"]
[ext_resource type="Texture2D" uid="uid://dfbteucf11lv3" path="res://Assets/Countertop/Inventory list textures/sugar_bottle.png" id="7_y05n1"]
[ext_resource type="Texture2D" uid="uid://yfy3l8fm0111" path="res://Assets/Kitchen/Utensils and Others/boiling_pot.png" id="8_maqfh"]
[ext_resource type="Texture2D" uid="uid://xnjs2pu8nt3l" path="res://Assets/Countertop/Ingredients/sugar_bottle.png" id="9_fj32b"]
[ext_resource type="Texture2D" uid="uid://curvdvo4kmag" path="res://Assets/Countertop/Ingredients/milk_bottle.png" id="10_hq25p"]
[ext_resource type="Texture2D" uid="uid://cumy6urptuhlc" path="res://Assets/Countertop/Ingredients/coffee_bottle.png" id="13_73v60"]
[ext_resource type="Texture2D" uid="uid://dwxqr1ybo2nkw" path="res://Assets/Countertop/Utensils/table_spoon_0.png" id="14_73v60"]
[ext_resource type="Texture2D" uid="uid://rsd54tvjboqe" path="res://Assets/Countertop/Utensils/coffee_mug_1.png" id="14_jvbil"]
[ext_resource type="Texture2D" uid="uid://bmyaqvpik8ugo" path="res://Assets/Countertop/Utensils/table_spoon_1.png" id="15_oj2sx"]
[ext_resource type="Texture2D" uid="uid://qyybojp87d8q" path="res://Assets/Countertop/Utensils/coffee_mug_2.png" id="15_vl6y5"]
[ext_resource type="Texture2D" uid="uid://wemvgxlc8c6m" path="res://Assets/Countertop/Utensils/table_spoon_2.png" id="16_jvbil"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv2u6"]
size = Vector2(1382, 209.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maqfh"]
size = Vector2(1940, 143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y05n1"]
size = Vector2(545, 113)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73v60"]
size = Vector2(35, 755)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oj2sx"]
size = Vector2(38, 848)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj32b"]
size = Vector2(1344, 738)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_maqfh"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(0.215363, 0.622677, 0.495171, 1)
shader_parameter/width = 8.5
shader_parameter/pattern = 2
shader_parameter/inside = true
shader_parameter/add_margins = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85bba"]
bg_color = Color(0.161157, 0.447465, 9.62615e-08, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.780392, 0.780392, 0.780392, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_offset = Vector2(-3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjb4g"]
bg_color = Color(0.123805, 0.355562, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.779291, 0.779291, 0.779291, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_offset = Vector2(-3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1dp4b"]
bg_color = Color(0.161157, 0.447465, 9.62615e-08, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_offset = Vector2(-3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kowp"]
bg_color = Color(0.048284, 0.182154, 1.20327e-08, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.366594, 0.366595, 0.366594, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_offset = Vector2(-4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv2u6"]
content_margin_left = 25.0
content_margin_top = 18.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.08469, 0.0846899, 0.0846899, 1)
border_width_left = 15
border_width_top = 8
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.515097, 0.136039, 4.81308e-08, 1)
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y05n1"]
bg_color = Color(0.162066, 0.162066, 0.162066, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 7
border_color = Color(0.513726, 0.137255, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15

[sub_resource type="LabelSettings" id="LabelSettings_73v60"]
font_size = 45
font_color = Color(0.76662, 0.76662, 0.76662, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x24wc"]
size = Vector2(488, 834)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fv2u6"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_oj2sx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_fj32b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvbil"]
size = Vector2(130, 144)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y05n1"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_jvbil"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_hq25p")
}, {
"duration": 1.0,
"texture": ExtResource("10_hq25p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vl6y5"]
size = Vector2(130, 288)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_73v60"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_vl6y5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_73v60")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kj7oi"]
size = Vector2(130, 176)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oj2sx"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_kj7oi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_sn5ev")
}, {
"duration": 1.0,
"texture": ExtResource("14_jvbil")
}, {
"duration": 1.0,
"texture": ExtResource("15_vl6y5")
}, {
"duration": 1.0,
"texture": ExtResource("15_vl6y5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mb6j"]
size = Vector2(150, 152)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jvbil"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_maqfh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_maqfh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbc70"]
size = Vector2(150, 152)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vl6y5"]
shader = ExtResource("2_sn5ev")
shader_parameter/color = Color(1, 0.905882, 0.376471, 1)
shader_parameter/width = 4.5
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = false

[sub_resource type="SpriteFrames" id="SpriteFrames_fv2u6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_73v60")
}, {
"duration": 1.0,
"texture": ExtResource("15_oj2sx")
}, {
"duration": 1.0,
"texture": ExtResource("16_jvbil")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56ogi"]
size = Vector2(142, 84)

[node name="Countertop" type="Node2D"]
script = ExtResource("1_maqfh")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_85bba")
centered = false

[node name="BackgroundArea" type="Area2D" parent="Background"]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Background/BackgroundArea"]
position = Vector2(687, 977.625)
shape = SubResource("RectangleShape2D_fv2u6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/BackgroundArea"]
position = Vector2(960, 61.5)
shape = SubResource("RectangleShape2D_maqfh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background/BackgroundArea"]
position = Vector2(1651.5, 1027.5)
shape = SubResource("RectangleShape2D_y05n1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Background/BackgroundArea"]
position = Vector2(13.5, 495.5)
shape = SubResource("RectangleShape2D_73v60")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Background/BackgroundArea"]
position = Vector2(1396, 544)
shape = SubResource("RectangleShape2D_oj2sx")

[node name="WorkingArea" type="Area2D" parent="Background"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/WorkingArea"]
position = Vector2(704, 503)
shape = SubResource("RectangleShape2D_fj32b")

[node name="HighlightAreaRect" type="Sprite2D" parent="Background"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_maqfh")
instance_shader_parameters/enabled = false
texture = ExtResource("4_x24wc")
centered = false

[node name="ShowInventoryListButton" type="Button" parent="."]
offset_left = 1417.0
offset_top = 10.0
offset_right = 1596.0
offset_bottom = 127.0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_85bba")
theme_override_styles/hover = SubResource("StyleBoxFlat_qjb4g")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1dp4b")
theme_override_styles/normal = SubResource("StyleBoxFlat_7kowp")
toggle_mode = true
action_mode = 0
text = "SHOW INVENTORY"
autowrap_mode = 2

[node name="InventoryList" type="ItemList" parent="."]
unique_name_in_owner = true
z_index = 1
clip_contents = false
offset_left = 1417.0
offset_top = 210.0
offset_right = 1904.0
offset_bottom = 967.0
theme_override_colors/guide_color = Color(0.328503, 0.0746415, 2.40654e-08, 1)
theme_override_constants/v_separation = 14
theme_override_font_sizes/font_size = 46
theme_override_styles/panel = SubResource("StyleBoxFlat_fv2u6")
auto_height = true
item_count = 6
max_columns = 5
fixed_column_width = 368
icon_scale = 0.7
item_0/text = "Coffee"
item_0/icon = ExtResource("5_maqfh")
item_1/text = "Milk bottle"
item_1/icon = ExtResource("6_fv2u6")
item_2/text = "Sugar"
item_2/icon = ExtResource("7_y05n1")
item_3/text = "Coffee mug"
item_3/icon = ExtResource("6_sn5ev")
item_4/text = "Tablespoon"
item_4/icon = ExtResource("7_x24wc")
item_5/text = "Boiling pot"
item_5/icon = ExtResource("8_maqfh")

[node name="Header" type="Label" parent="InventoryList"]
layout_mode = 1
anchors_preset = -1
offset_top = -76.0
offset_right = 487.0
offset_bottom = 9.0
theme_override_styles/normal = SubResource("StyleBoxFlat_y05n1")
text = "I N V E N T O R Y"
label_settings = SubResource("LabelSettings_73v60")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryListArea" type="Area2D" parent="InventoryList"]
unique_name_in_owner = true
z_index = 1

[node name="CollisionShape2D2" type="CollisionShape2D" parent="InventoryList/InventoryListArea"]
position = Vector2(243, 341)
shape = SubResource("RectangleShape2D_x24wc")

[node name="ItemGroup" type="Node2D" parent="."]
z_index = 1

[node name="SugarBottle" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_fv2u6")
instance_shader_parameters/enabled = false
sprite_frames = SubResource("SpriteFrames_oj2sx")

[node name="SugarBottleArea" type="Area2D" parent="ItemGroup/SugarBottle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/SugarBottle/SugarBottleArea"]
shape = SubResource("RectangleShape2D_jvbil")

[node name="MilkBottle" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_y05n1")
sprite_frames = SubResource("SpriteFrames_jvbil")

[node name="MilkBottleArea" type="Area2D" parent="ItemGroup/MilkBottle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/MilkBottle/MilkBottleArea"]
shape = SubResource("RectangleShape2D_vl6y5")

[node name="CoffeePowderBottle" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_73v60")
sprite_frames = SubResource("SpriteFrames_vl6y5")

[node name="CoffeePowderBottleArea" type="Area2D" parent="ItemGroup/CoffeePowderBottle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/CoffeePowderBottle/CoffeePowderBottleArea"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_kj7oi")

[node name="CoffeeMug" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_oj2sx")
sprite_frames = SubResource("SpriteFrames_kj7oi")

[node name="CoffeeMugArea" type="Area2D" parent="ItemGroup/CoffeeMug"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/CoffeeMug/CoffeeMugArea"]
shape = SubResource("RectangleShape2D_8mb6j")

[node name="BoilingPot" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_jvbil")
sprite_frames = SubResource("SpriteFrames_maqfh")

[node name="BoilingPotArea" type="Area2D" parent="ItemGroup/BoilingPot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/BoilingPot/BoilingPotArea"]
shape = SubResource("RectangleShape2D_cbc70")

[node name="Tablespoon" type="AnimatedSprite2D" parent="ItemGroup"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_vl6y5")
instance_shader_parameters/enabled = false
sprite_frames = SubResource("SpriteFrames_fv2u6")

[node name="TablespoonArea" type="Area2D" parent="ItemGroup/Tablespoon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemGroup/Tablespoon/TablespoonArea"]
shape = SubResource("RectangleShape2D_56ogi")

[connection signal="input_event" from="Background/BackgroundArea" to="." method="_on_background_area_input_event"]
[connection signal="input_event" from="Background/WorkingArea" to="." method="_on_working_area_input_event"]
[connection signal="mouse_entered" from="Background/WorkingArea" to="." method="_on_working_area_mouse_entered"]
[connection signal="mouse_exited" from="Background/WorkingArea" to="." method="_on_working_area_mouse_exited"]
[connection signal="toggled" from="ShowInventoryListButton" to="." method="_on_show_inventory_list_button_toggled"]
[connection signal="gui_input" from="InventoryList" to="." method="_on_inventory_list_gui_input"]
[connection signal="item_selected" from="InventoryList" to="." method="_on_inventory_list_item_selected"]
[connection signal="input_event" from="InventoryList/InventoryListArea" to="." method="_on_inventory_list_area_input_event"]
[connection signal="input_event" from="ItemGroup/SugarBottle/SugarBottleArea" to="." method="_on_placed_item_area_input_event" binds= ["Sugar"]]
[connection signal="input_event" from="ItemGroup/MilkBottle/MilkBottleArea" to="." method="_on_placed_item_area_input_event" binds= ["Milk bottle"]]
[connection signal="input_event" from="ItemGroup/CoffeePowderBottle/CoffeePowderBottleArea" to="." method="_on_placed_item_area_input_event" binds= ["Coffee"]]
[connection signal="input_event" from="ItemGroup/CoffeeMug/CoffeeMugArea" to="." method="_on_placed_item_area_input_event" binds= ["Coffee mug"]]
[connection signal="input_event" from="ItemGroup/BoilingPot/BoilingPotArea" to="." method="_on_placed_item_area_input_event" binds= ["Boiling pot"]]
[connection signal="input_event" from="ItemGroup/Tablespoon/TablespoonArea" to="." method="_on_placed_item_area_input_event" binds= ["Tablespoon"]]
